[package]
name = "media_box"
version = "0.1.0"
authors = ["passchaos <greedwolf.dss@gmail.com>"]

[dependencies]
getopts = "*"
num = "*"
hyper = "*"
mime = "*"
serde = "*"
serde_macros = "*"
serde_json = "*"
# ring = "*"
rust-crypto = "*"
rand = "*"
base64 = "*"
url = "*"
log = "*"
env_logger = "*"
